RESOLVED FIXED159112
The active state of elements can break when focus changes
https://bugs.webkit.org/show_bug.cgi?id=159112
Summary The active state of elements can break when focus changes
Benjamin Poulain
Reported 2016-06-24 18:44:41 PDT
The active state of elements can break when focus changes
Attachments
Patch (20.43 KB, patch)
2016-06-24 18:53 PDT, Benjamin Poulain
no flags
Patch (21.34 KB, patch)
2016-06-24 19:11 PDT, Benjamin Poulain
koivisto: review+
Benjamin Poulain
Comment 1 2016-06-24 18:53:30 PDT
Benjamin Poulain
Comment 2 2016-06-24 19:11:38 PDT
Antti Koivisto
Comment 3 2016-06-25 15:54:39 PDT
Comment on attachment 282043 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=282043&action=review > Source/WebCore/ChangeLog:33 > + (WebCore::Document::setFocusedElement): Deleted.A Truncated comment?
Benjamin Poulain
Comment 4 2016-06-25 21:34:39 PDT
Note You need to log in before you can comment on or make changes to this bug.