The active state of elements can break when focus changes https://bugs.webkit.org/show_bug.cgi?id=159112

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-06-25
Reviewed by Antti Koivisto.

Source/WebCore:

The pseudo class :active was behaving weirdly when used
with label elements with an associated form element.
The form element would get the :active state on the first click
then no longer get the state until the focus changes.

What was happenning is setFocusedElement() was clearing active
for some unknown reason. When you really do that on an active element,
you end up in an inconsistent state where no invalidation works.

The two tests illustrates 2 ways this breaks.

The test "pseudo-active-on-labeled-element-not-canceled-by-focus" clicks
several time on a lable element. The first time, the input element gets
the focus. The second time, it already has the focus, setFocusedElement()
clears :active before finding the focusable element and end up clearing
the active state on a target in the active chain.

The test "pseudo-active-with-programmatic-focus.html" shows how to invalidate
arbitrary elements using JavaScript. This can cause severely broken active
chains where invalidation never cleans some ancestors.

Tests: fast/css/pseudo-active-on-labeled-element-not-canceled-by-focus.html
       fast/css/pseudo-active-with-programmatic-focus.html

* dom/Document.cpp:
(WebCore::Document::setFocusedElement): Deleted.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMouseDoubleClickEvent):
This is WebKit1 specific. The double click event was dispatching
the mouseUp and Click with after doing an Active hit test.
This causes us to have :active state in and after mouseUp in WebKit1.

LayoutTests:

* fast/css/pseudo-active-on-labeled-element-not-canceled-by-focus-expected.txt: Added.
* fast/css/pseudo-active-on-labeled-element-not-canceled-by-focus.html: Added.
* fast/css/pseudo-active-with-programmatic-focus-expected.txt: Added.
* fast/css/pseudo-active-with-programmatic-focus.html: Added.


Canonical link: https://commits.webkit.org/177226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202470 268f45cc-cd09-0410-ab3c-d52691b4dbfc